# rusty-hasher

./: .gitignore  Cargo.toml  Makefile  README.md  hashes.txt  passwords.txt
.githooks/: pre-commit
include/: queue.h  thread_pool.h
src/: dictionary_words.rs  dictionary_words_ascii.rs  lib.rs  password_cracker.c  queue.c  queue.rs  thread_pool.c  thread_pool.rs
tests/: mqueue_empty.rs  mqueue_multiple_queues.rs  mqueue_push_pop.c  mqueue_push_pop.rs  mqueue_test_empty.c  password_cracker.rs  prime_printer.rs  primes_multiple_pools.rs  primes_periodic_work.rs  primes_repeat_drain.rs  recursive_add_work.rs  sleepers.c  sleepers.rs  squeue_push_pop.rs  squeue_single_fill.rs  test_mqueue.sh  test_pool.sh  test_squeue.sh
tests/common/: mod.rs
