[package]
name = "scoped-threadpool"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tyler274/rusty-hasher"
description = "A simple scoped threadpool implementation and related tests including a password hasher"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.121"
pwhash = "1"